# phidgets_interface_kit

./: CMakeLists.txt  README.md  package.xml
include/phidgets_interface_kit/: interface_kit.h
msg/: AnalogChange.msg  DigitalArray.msg  DigitalChange.msg
src/: interface_kit_client.cpp  interface_kit_node.cpp  interface_kit_v1.cpp  ir_range_node.cpp  manager.cpp  manager_client.cpp  voltage_divider_node.cpp
srv/: SetDataRate.srv  SetSensorChangeTrigger.srv
