<?xml version="1.0"?>
<package>
  <name>phidgets_interface_kit</name>
  <version>0.0.1</version>
  <description>The phidgets_port package</description>

  <maintainer email="alan.meekins@gmail.com">Alan Meekins</maintainer>
  <author email="alan.meekins@gmail.com">Alan Meekins</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>phidgets_api</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>phidgets_api</run_depend>

</package>
